@@ -77,28 +77,8 @@ fr <- function(x) {
 
 ansrosenbrock0 <- hjn(fn=fr, par=c(1,2), control=list(maxfeval=2000, trace=0))
 print(ansrosenbrock0) # use print to allow copy to separate file that 
+
 #    can be called using source()
-#####################
-# Simple bounds and masks test
-bt.f<-function(x){
- sum(x*x)
-}
-
-n<-10
-xx<-rep(0,n)
-lower<-rep(0,n)
-upper<-lower # to get arrays set
-bdmsk<-rep(1,n)
-bdmsk[(trunc(n/2)+1)]<-0
-for (i in 1:n) { 
-   lower[i]<-1.0*(i-1)*(n-1)/n
-   upper[i]<-1.0*i*(n+1)/n
-}
-xx<-0.5*(lower+upper)
-ansbt<-hjn(xx, bt.f, lower, upper, bdmsk, control=list(trace=1, maxfeval=2000))
-
-print(ansbt)
-
 #####################
 genrose.f<- function(x, gs=NULL){ # objective function
 ## One generalization of the Rosenbrock banana valley function (n parameters)
@@ -112,8 +92,6 @@ xx<-rep(pi,10)
 lower<-NULL
 upper<-NULL
 bdmsk<-NULL
-genrosea<-hjn(xx,genrose.f, control=list(maxfeval=2000), gs=10)
-print(genrosea)
 
 cat("timings B vs U\n")
 lo<-rep(-100,10)
@@ -130,95 +108,11 @@ print(ab)
 cat("diff fu-fb=",au$value-ab$value,"\n")
 cat("max abs parameter diff = ", max(abs(au$par-ab$par)),"\n")
 
-maxfn<-function(x) {
-      	n<-length(x)
-	ss<-seq(1,n)
-	f<-10-(crossprod(x-ss))^2
-	f<-as.numeric(f)
-	return(f)
-}
-
-negmaxfn<-function(x) {
-	f<-(-1)*maxfn(x)
-	return(f)
-}
-
-
-#####################  From Rvmmin.Rd
-cat("test bounds and masks\n")
-nn<-4
-startx<-rep(pi,nn)
-lo<-rep(2,nn)
-up<-rep(10,nn)
-grbds1<-hjn(startx,genrose.f, lower=lo,upper=up, control=list(maxfeval=2000, trace=0)) 
-print(grbds1)
-
-cat("test lower bound only\n")
-nn<-4
-startx<-rep(pi,nn)
-lo<-rep(2,nn)
-grbds2<-hjn(startx,genrose.f, lower=lo) 
-print(grbds2)
-
-cat("test lower bound single value only\n")
-nn<-4
-startx<-rep(pi,nn)
-lo<-2
-up<-rep(10,nn)
-grbds3<-hjn(startx,genrose.f, lower=lo) 
-print(grbds3)
-
-cat("test upper bound only\n")
-nn<-4
-startx<-rep(pi,nn)
-lo<-rep(2,nn)
-up<-rep(10,nn)
-grbds4<-hjn(startx,genrose.f, upper=up, control=list(maxfeval=2000)) 
-print(grbds4)
-
-cat("test upper bound single value only\n")
-nn<-4
-startx<-rep(pi,nn)
-grbds5<-hjn(startx,genrose.f, upper=10, control=list(maxfeval=2000)) 
-print(grbds5)
-
-
-
-cat("test masks only\n")
-nn<-6
-bd<-c(1,1,0,0,1,1)
-startx<-rep(pi,nn)
-grbds6<-hjn(startx,genrose.f, bdmsk=bd, control=list(maxfeval=2000)) 
-print(grbds6)
-
-cat("test upper bound on first two elements only\n")
-nn<-4
-startx<-rep(pi,nn)
-upper<-c(10,8, Inf, Inf)
-grbds7<-hjn(startx,genrose.f, upper=upper, control=list(maxfeval=2000)) 
-print(grbds7)
-
-
-cat("test lower bound on first two elements only\n")
-nn<-4
-startx<-rep(0,nn)
-lower<-c(0, -0.1 , -Inf, -Inf)
-grbds8a<-hjn(startx,genrose.f, lower=lower, control=list(maxfeval=2000)) 
-print(grbds8a)
-
-cat("test n=1 problem using simple squares of parameter\n")
-
-sqtst<-function(xx) {
-   res<-sum((xx-2)*(xx-2))
-}
-
 ######### One dimension test
 nn<-1
 startx<-rep(0,nn)
 onepar<-hjn(startx,sqtst,control=list(trace=1)) 
 print(onepar)
-
-
 }
 
 \keyword{nonlinear}
